--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>reveal.js – demo</title>
 
-		<meta name="description" content="A Progress Report">
+		<meta name="description" content="reveal.js demo">
 		<meta name="author" content="Ishin Fukuoka">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
